--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
-            <a href="https://wa.me/5599920180512" class="whatsapp-btn">
+            <a href="https://wa.me/5599920180512?text=Vim%20tirar%20uma%20duvida%20no%20whats" class="whatsapp-btn">
                 <i class="fab fa-whatsapp"></i>
                 Atendimento
             </a>
@@ -573,12 +573,12 @@
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://wa.me/5599920180512"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/5599920180512?text=Vim%20tirar%20uma%20duvida%20no%20whats"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
                     <h3>Contato</h3>
-                    <p><i class="fas fa-phone"></i> +55 99 2018-0512</p>
+                    <p><i class="fas fa-phone"></i> 55 99 2018-0512</p>
                     <p><i class="fas fa-envelope"></i> contato@bvfinanceira.com.br</p>
                     <p><i class="fas fa-map-marker-alt"></i> São Paulo - SP</p>
                 </div>
@@ -604,7 +604,7 @@
     </footer>
 
      Floating WhatsApp 
-    <a href="https://wa.me/5599920180512" class="floating-whatsapp" title="Fale conosco no WhatsApp">
+    <a href="https://wa.me/5599920180512?text=Vim%20tirar%20uma%20duvida%20no%20whats" class="floating-whatsapp" title="Fale conosco no WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
